syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "Proto/Common/uuid.proto";

option csharp_namespace = "Aggregator.EducationalInstitutionAPI.Proto";

message BaseCommandResult{
	Uuid educational_institution_id=1;
}

message GetByIDQueryResult{
	string name=1;
	string description=2;
	string location_id=3;
	google.protobuf.Timestamp join_date=4;
	BaseQueryResult parent_institution=5;
	repeated string buildings=6;
	repeated BaseQueryResult child_institutions=7;
}

message BaseQueryResult{
	Uuid educational_institution_id=1;
	string name=2;
	string description=3;
}
